fix: sidebar overflow and scrolling

--- a/perp-walk/www/custom.css
+++ b/perp-walk/www/custom.css
@@ -135,6 +135,11 @@ Starting with content, navbar, logo
   position: fixed;
 }
 
+#sidebarItemExpanded {
+  overflow: auto;
+  max-height: calc(100vh - 50px) !important;
+}
+
 .sidebar-menu > li { /* this does the sidebar menu text */
   font-family:"Montserrat", sans-serif;
   font-weight:500;
